# rosbridge_suite

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  CHANGELOG.md  Dockerfile  LICENSE  QUALITY_DECLARATION.md  README  README.md  README_test_new_capabilities.txt  ROSBRIDGE_PROTOCOL.md  TROUBLESHOOTING.md  install.sh  new_opcodes.txt  pyproject.toml  requirements.txt  rosbridge_parameters.txt  run_docker.sh  setup.cfg  stack.xml
rosapi/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  mapping_rules.yaml  package.xml  setup.cfg  setup.py
rosapi/rosapi/: params.py  rosapi_node.py  stringify_field_types.py
rosapi/scripts/: rosapi  rosapi_node
rosapi/src/: proxy.py
rosapi/src/ros_api/: objectutils.py  params.py
rosapi/src/rosapi/: glob_helper.py  objectutils.py  params.py  proxy.py  stringify_field_types.py
rosapi/srv/: DeleteParam.srv  GetActionServers.srv  GetParam.srv  GetParamNames.srv  GetTime.srv  HasParam.srv  NodeDetails.srv  Nodes.srv  Publishers.srv  SearchParam.srv  ServiceHost.srv  ServiceNode.srv  ServiceProviders.srv  ServicesForType.srv  SetParam.srv  Subscribers.srv  Topics.srv  TopicsForType.srv  TopicsTypes.srv
rosapi/test/: test_objectutils.py  test_stringify_field_types.py  test_typedefs.py
rosapi_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosapi_msgs/msg/: TypeDef.msg
rosapi_msgs/srv/: DeleteParam.srv  GetROSVersion.srv  GetTime.srv  NodeDetails.srv  ServiceNode.srv  ServiceRequestDetails.srv  ServiceType.srv  Services.srv  ServicesForType.srv  SetParam.srv  Subscribers.srv  TopicType.srv  Topics.srv  TopicsAndRawTypes.srv  TopicsForType.srv
rosbridge_client/: CMakeLists.txt  README.md  package.xml  setup.py
rosbridge_client/launch/: rosbridge_client.launch
rosbridge_client/scripts/: cameraBroadcast.py  examplePublisher.py  websocket_client.py  websocket_handler.py
rosbridge_client/src/rosbridge_client/: __init__.py  client.py  websocket_handler.py
rosbridge_client/test/: simple_test_server.py
rosbridge_library/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  setup.cfg  setup.py
rosbridge_library/msg/: TestChar.msg  TestDurationArray.msg  TestHeader.msg  TestTimeArray.msg
rosbridge_library/rosbridge_library/: protocol.py
rosbridge_library/rosbridge_library/capabilities/: advertise_service.py  call_service.py  publish.py
rosbridge_library/rosbridge_library/internal/: message_conversion.py  outgoing_message.py  pngcompression.py  publishers.py  subscription_modifiers.py
rosbridge_library/rosbridge_library/util/: cbor.py
rosbridge_library/src/rosbridge_library/: capability.py  protocol.py  rosbridge_protocol.py
rosbridge_library/srv/: MirorCalculateTipfollowingTrajectoryTest.srv  SendBytes.srv  TestArrayRequest.srv  TestMultipleRequestFields.srv  TestMultipleResponseFields.srv  TestNestedService.srv  TestRequestAndResponse.srv  TestRequestOnly.srv
rosbridge_library/test/: test_all.test
rosbridge_library/test/capabilities/: test_action_capabilities.py  test_advertise.py  test_call_service.py  test_capabilities.test  test_publish.py  test_service_capabilities.py  test_subscribe.py
rosbridge_library/test/internal/: notest_cbor_conversion.py  notest_outgoing_message.py  test_cbor_conversion.py  test_compression.py  test_internal.test  test_message_conversion.py  test_outgoing_message.py  test_ros_loader.py  test_services.py
rosbridge_library/test/tcp+complex_srv/: test_non-ros_service_client_complex-srv.py  test_non-ros_service_server_complex-srv.py
rosbridge_library/test/tcp+fragmentation+service-provider/: test_non-ros_service_client_fragmented.py  test_non-ros_service_server_fragmented.py
rosbridge_library_test/: CMakeLists.txt  package.xml
rosbridge_library_test/test/internal/: test_ros_loader.py
rosbridge_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbridge_msgs/msg/: AuthenticationField.msg  ConnectedClient.msg  ConnectedClients.msg  HttpHeaderFieldList.msg
rosbridge_msgs/srv/: Authentication.srv  Authorization.srv  HttpAuthentication.srv
rosbridge_server/: .project  CHANGELOG.rst  CMakeLists.txt  _CMakeLists.txt  mainpage.dox  package.xml  setup.cfg  setup.py
rosbridge_server/launch/: rosbridge_tcp.launch  rosbridge_tcp_launch.py  rosbridge_tcp_launch.xml  rosbridge_udp.launch  rosbridge_udp_launch.xml  rosbridge_websocket.launch  rosbridge_websocket_launch.py  rosbridge_websocket_launch.xml
rosbridge_server/msg/: ClientInfo.msg
rosbridge_server/nodes/: rosbridge.py  rosbridge_tcp.py
rosbridge_server/rosbridge_server/: rosbridge_websocket.py
rosbridge_server/scripts/: rosbridge_server  rosbridge_tcp  rosbridge_tcp.py  rosbridge_udp  rosbridge_udp.py  rosbridge_websocket  rosbridge_websocket.py
rosbridge_server/src/rosbridge_server/: __init__.py  autobahn_websocket.py  (+6 more)
rosbridge_suite/: CHANGELOG.rst  CMakeLists.txt  install.sh  package.xml
rosbridge_suite/rosapi/: .project
rosbridge_suite/rosbridge_clients/: .project
rosbridge_suite/rosbridge_launch/: mainpage.dox  manifest.xml
rosbridge_suite/rosbridge_library/: .project  CMakeLists.txt  mainpage.dox
rosbridge_suite/rosbridge_test/: manifest.xml
rosbridge_suite/roswww/: .project  mainpage.dox
rosbridge_suite/tf_smart_throttle/: .project
rosbridge_test_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbridge_test_msgs/action/: ComplexName.action  TestEmpty.action  TestGoalAndResult.action  TestGoalFeedbackAndResult.action  TestGoalOnly.action  TestMultipleGoalFields.action  TestResultOnly.action
rosbridge_test_msgs/msg/: TestBoundedString.msg  TestChar.msg  TestFloat32BoundedArray.msg  TestHeader.msg  TestHeaderArray.msg  TestNestedBoundedArray.msg  TestTimeArray.msg  TestUInt8.msg  TestUInt8FixedSizeArray16.msg
rosbridge_test_msgs/srv/: TestArrayRequest.srv  TestMultipleRequestFields.srv  TestMultipleResponseFields.srv  TestRequestAndResponse.srv  TestResponseOnly.srv
rosbridge_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
test_rosbridge_library/: .project  CMakeLists.txt  package.xml
test_rosbridge_library/msg/: TimeArrayTest.msg
(+319 files in other folders)
