<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosapi</name>
  <version>0.11.15</version>
  <description>
    Provides service calls for getting ros meta-information, like list of
    topics, services, params, etc.
  </description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rosapi</url>
  <url type="bugtracker">https://github.com/RobotWebTools/rosbridge_suite/issues</url>
  <url type="repository">https://github.com/RobotWebTools/rosbridge_suite</url>

  <author email="jonathan.c.mace@gmail.com">Jonathan Mace</author>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>rosbridge_library</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosnode</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
