<?xml version="1.0"?>
<package format="2">
  <name>rosbridge_client</name>
  <version>0.9.0</version>
  <description>A Websocket client interface to rosbridge</description>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rosbridge_server</url>
  <url type="bugtracker">https://github.com/RobotWebTools/rosbridge_suite/issues</url>
  <url type="repository">https://github.com/RobotWebTools/rosbridge_suite</url>

  <author>Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rosbridge_library</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
