<?xml version="1.0"?>
<package format="3">
  <name>rosbridge_library</name>
  <version>1.3.2</version>
  <description>
    The core rosbridge package, responsible for interpreting JSON andperforming
    the appropriate ROS action, like subscribe, publish, call service, and
    interact with params.
  </description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rosbridge_library</url>
  <url type="bugtracker">https://github.com/RobotWebTools/rosbridge_suite/issues</url>
  <url type="repository">https://github.com/RobotWebTools/rosbridge_suite</url>

  <author email="jonathan.c.mace@gmail.com">Jonathan Mace</author>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <maintainer email="ros-tooling@foxglove.dev">Foxglove</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>python3-pil</build_depend>
  <build_depend>python3-bson</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>python3-bson</exec_depend>

  <test_depend>rosbridge_test_msgs</test_depend>
  <test_depend>actionlib_msgs</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>builtin_interfaces</test_depend>
  <test_depend>diagnostic_msgs</test_depend>
  <test_depend>example_interfaces</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>nav_msgs</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>stereo_msgs</test_depend>
  <test_depend>tf2_msgs</test_depend>
  <test_depend>trajectory_msgs</test_depend>
  <test_depend>visualization_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
