<?xml version="1.0"?>
<package format="2">
  <name>rosbridge_msgs</name>
  <version>0.11.10</version>
  <description>Package containing message files</description>

  <maintainer email="achim@intermodalics.eu">Hans-Joachim Krauch</maintainer>
  <author email="achim@intermodalics.eu">Hans-Joachim Krauch</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

</package>
