<?xml version="1.0"?>
<package format="3">
  <name>rosbridge_server</name>
  <version>0.11.10</version>
  <description>A WebSocket interface to rosbridge.</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rosbridge_server</url>
  <url type="bugtracker">https://github.com/RobotWebTools/rosbridge_suite/issues</url>
  <url type="repository">https://github.com/RobotWebTools/rosbridge_suite</url>

  <author email="jonathan.c.mace@gmail.com">Jonathan Mace</author>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-autobahn</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-autobahn</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-backports.ssl-match-hostname</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-tornado</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-tornado</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-twisted-core</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-twisted</exec_depend>
  <exec_depend>rosbridge_library</exec_depend>
  <exec_depend>rosbridge_msgs</exec_depend>
  <exec_depend>rosapi</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosauth</exec_depend>
  <test_depend>rostest</test_depend>
</package>
