<?xml version="1.0"?>
<package>
  <name>rosbridge_tools</name>
  <version>0.7.5</version>
  <description>
    Third party libraries(backports and tornado) used for Robot Webtools.
  </description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rosbridge_server</url>
  <url type="bugtracker">https://github.com/RobotWebTools/rosbridge_suite/issues</url>
  <url type="repository">https://github.com/RobotWebTools/rosbridge_suite</url>

  <author email="jonathan.c.mace@gmail.com">Jonathan Mace</author>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
</package>
